kubernetes/apps/media/bazarr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
  labels:
    media.sign-in: pocket-id
spec:
  hostnames: ["bazarr.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: bazarr
          port: 6767
